--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">YEMA</string>
+    <string name="app_name">Doride</string>
 
     <string name="version">V %1$s</string>
     <string name="terms_of_service">《<u>服务条款</u>》</string>
