添加一些资源文件 修改日报选择日期crash问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="listItem_day_driveInfo">今日驾驶%1$s次</string>
     <string name="day_score">分</string>
     <string name="listItem_day_timeAndMile">%1$s至%2$s(%3$s)</string>
+    <string name="sesame_listItem_day_timeAndMile">%1$s至%2$s(%3$s) %4$s公里</string>"
     <string name="vin_filter_string">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
     <string name="pwd_filter_input_string">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
         &#126;&#096;&#064;&#035;&#036;&#037;&#094;&#038;&#042;-&#095;&#061;&#043;&#124;\\&#063;&#047;&#040;
