--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="car_manager_txt">车辆管理</string>
     <string name="msg_manager_txt">消息管理</string>
     <string name="device_manager_txt">设备管理</string>
+    <string name="device_recharge_txt">流量包充值</string>
     <string name="general_manager_txt">通用管理</string>
     <string name="clean_cache_txt">清除缓存</string>vart
     <string name="contact_us_txt">联系我们</string>
@@ -176,4 +177,12 @@
 
     <string name="register_secretary_girl">芝麻小秘书</string>
     <string name="register_secretary_boy">乐博士</string>
+
+    <string name="traffic_used_status">已用流量:%1$s</string>
+    <string name="traffic_remain_status">剩余流量:%1$s</string>
+    <string name="traffic_log_buy_value">[ %1$s ]</string>
+
+    <string name="traffic_buy_info"><font size="14">%1$s</font>\\n<font size="12">%2$.2f元</font></string>
+    <string name="traffic_buy_value">[%1$d]</string>
+    <string name="traffic_buy_amount">￥%1$s</string>
 </resources>
