1.  芝麻E02 新能源汽车取消 "芝麻"字眼；芝麻小秘书，改为，小秘书；
2. 当车辆正在充电时，车辆状态为：您的爱车正在充电；

3. 新能源车型的 首页（背景图、车模图）、座驾（背景图、车模图）、远程（车模图）走后台配置，从配置中获取；

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="career_main_km_h">公里/小时</string>
 
     <!-- 生涯-车秘书 -->
-    <string name="secretary_name">芝麻小秘书 :</string>
+    <string name="secretary_name">小秘书 :</string>
     <string name="secretary_tip_title">车秘书提示标题</string>
     <string name="secretary_tip_content">车秘书提示内容</string>
     <string name="secretary_tip_title1">用车提醒提示标题</string>
@@ -175,7 +175,7 @@
     <string name="car_frame">车&#160;&#160;架&#160;&#160;号</string>
     <string name="car_certificate">登记证书号</string>
 
-    <string name="register_secretary_girl">芝麻小秘书</string>
+    <string name="register_secretary_girl">小秘书</string>
     <string name="register_secretary_boy">乐博士</string>
 
     <string name="traffic_used_status">已用流量:%1$s</string>
