1，电动车去掉近期登录记录

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="career_main_km_h">公里/小时</string>
 
     <!-- 生涯-车秘书 -->
-    <string name="secretary_name">小秘书 :</string>
+    <string name="secretary_name">大乘助手:</string>
     <string name="secretary_tip_title">车秘书提示标题</string>
     <string name="secretary_tip_content">车秘书提示内容</string>
     <string name="secretary_tip_title1">用车提醒提示标题</string>
